<resources>


    <!--Dialogue_layout-->
    <string name="app_name">InfoConnect</string>
    <string name="Entire_College">Entire College</string>
    <string name="hod">HOD</string>
    <string name="faculty">Faculty</string>
    <string name="management">Management</string>
    <string name="others">Others</string>
    <!---->

    <!--Description layout-->
    <string name="title">This is the notice title</string>
    <string name="postedBy">Posted by :</string>
    <string name="postedOn">Posted on :</string>
    <string name="download_bttn">Download</string>
    <string name="tvConnErrMsg">You\'re not connected!</string>
    <!---->

    <!--activity_main layout-->
    <string name="logo">Logo</string>
    <!---->

    <!--fragment_createNotice layout-->
    <string name="title_hint">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="toggle_text">Upload For</string>
    <string name="attach">Attach</string>
    <!---->

    <!--list_item layout-->
    <string name="filename">FileName</string>
    <!---->

    <!--login layout-->
    <string name="usernmae">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <!---->

    <!--nav_bar layout-->
    <string name="welcome_user">"Welcome, User"</string>
    <string name="jssate">"JSS Academy Of Technical Education"</string>
    <!---->

    <!--Upload_for_details layout-->

    <string name="select_course">Select Course</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_year">Select Year</string>
    <string name="select_section">Select Section</string>

    <string-array name="uplaod_category">
        <item>Academics</item>
        <item>Administration</item>
        <item>Training and Placement</item>
        <item>Events</item>
        <item>Miscelleneous</item>
    </string-array>

    <string-array name="select_course">
        <item>All Courses</item>
        <item>BTech</item>
        <item>MTech</item>
        <item>MCA</item>
        <item>MBA</item>
    </string-array>

    <string-array name="select_branch_Btech">
        <item>All Branches</item>
        <item>CSE</item>
        <item>IT</item>
        <item>ECE</item>
        <item>EE</item>
        <item>CE</item>
        <item>IC</item>
        <item>ME</item>
    </string-array>

    <string-array name="select_branch_Mtech">
        <item>All Branches</item>
        <item>CSE</item>
        <item>IT</item>
        <item>ECE</item>
    </string-array>

    <string-array name="select_branch_MCA">
        <item>All Branches</item>
        <item>CSE</item>
        <item>IT</item>
    </string-array>

    <string-array name="select_branch_MBA">
        <item>All Branches</item>
    </string-array>

    <string-array name="select_year_Btech">
        <item>All years</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="select_year_Others">
        <item>All years</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="select_year_MCA">
        <item>All years</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="select_section">
        <item>All Sections</item>
        <item>CSE1</item>
        <item>CSE2</item>
        <item>IT1</item>
        <item>IT2</item>
        <item>ECE1</item>
        <item>ECE2</item>
        <item>ECE3</item>
        <item>EE1</item>
        <item>EE2</item>
        <item>CE1</item>
        <item>CE2</item>
        <item>IC1</item>
        <item>IC2</item>
    </string-array>

    <string-array name="select_section_CSE">
        <item>All Sections</item>
        <item>CSE1</item>
        <item>CSE2</item>
    </string-array>

    <string-array name="select_section_ME">
        <item>All Sections</item>
        <item>ME1</item>
        <item>ME2</item>
        <item>ME3</item>
    </string-array>

    <string-array name="select_section_IT">
        <item>All Sections</item>
        <item>IT1</item>
        <item>IT2</item>
    </string-array>

    <string-array name="select_section_ECE">
        <item>All Sections</item>
        <item>ECE1</item>
        <item>ECE2</item>
        <item>ECE3</item>
    </string-array>

    <string-array name="select_section_EE">
        <item>All Sections</item>
        <item>EE1</item>
        <item>EE2</item>
    </string-array>

    <string-array name="select_section_CE">
        <item>All Sections</item>
        <item>CE1</item>
        <item>CE2</item>
    </string-array>

    <string-array name="select_section_IC">
        <item>All Sections</item>
        <item>IC1</item>
        <item>IC2</item>
    </string-array>

    <string-array name="select_section_Others">
        <item>All Sections</item>
    </string-array>
    <!---->

     <string name="ok">OK</string>
     <string name="cancel">CANCEL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="notices">"All notices"</string>
    <string name="placement">"Placement"</string>
    <string name="administration">"Administration"</string>
    <string name="academics">"Academics"</string>
    <string name="events">"Events"</string>
    <string name="filler">"Filler Notices"</string>
    <string name="download">"Download"</string>
    <string name="starred">"Starred"</string>
    <string name="profile">"My Profile"</string>
    <string name="logout">"Logout"</string>



    <string name="create_notice">Create Notice</string>
    <string name="share">Share</string>
    <string name="star">Star</string>



    <string name="student_profile">Student Profile</string>
    <string name="course">Course</string>
    <string name="branch">Branch</string>
    <string name="year">Year</string>
    <string name="address">Address</string>
    <string name="section">Section</string>
    <string name="uni_roll_no">University Roll No.</string>
    <string name="contact_no">Contact No.</string>
    <string name="mother_contact_no.">Mother\'s Contact No.</string>
    <string name="father_contact_no.">Father\'s Contact No.</string>
    <string name="faculty_profile">Faculty Profile</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="email">Email</string>

</resources>
