<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:checkableBehavior="single">

    <group  android:checkableBehavior="single">

        <item
            android:id="@+id/nav_notices"

            android:title="@string/notices" />
        <item
            android:id="@+id/nav_administration"

            android:title="@string/administration" />
        <item
            android:id="@+id/nav_academics"

            android:title="@string/academics" />
        <item
            android:id="@+id/nav_placement"

            android:title="@string/placement" />
        <item
            android:id="@+id/nav_events"

            android:title="@string/events" />
        <item
            android:id="@+id/nav_starred"

            android:title="@string/starred" />
        <item
            android:id="@+id/nav_download"

            android:title="@string/download" />
        <item
            android:id="@+id/nav_create"

            android:title="@string/create_notice" />

    </group>
    <item android:title="@string/action_settings">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_myprofile"

                android:title="@string/profile" />
            <item
                android:id="@+id/nav_logout"

                android:title="@string/logout" />
            </group>

        </menu>

    </item>

</menu>
