<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_course"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_branch"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_branch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_year"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_section"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>


</LinearLayout>