<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.hackncs.click.DescriptionActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#644599"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/nTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#efefef"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/postedby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nTitle"
            android:text="@string/postedBy"
            android:textColor="#efefef"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nFaculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nTitle"
            android:layout_toEndOf="@+id/postedby"
            android:layout_toRightOf="@+id/postedby"
            android:textColor="#efefef"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/postedon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/postedby"
            android:layout_toStartOf="@+id/ndate"
            android:layout_toLeftOf="@+id/ndate"
            android:text="@string/postedOn"
            android:textColor="#efefef"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ndate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nFaculty"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="#efefef"
            android:textSize="12sp" />
    </RelativeLayout>

    <WebView
        android:id="@+id/nDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/downloadB"
        android:layout_below="@+id/container" />

    <Button
        android:id="@+id/downloadB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/download_bttn"
        android:textColor="#fff" />

</RelativeLayout>
